--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background-color: rgb(174, 192, 252);
+    background-color: rgb(5, 5, 24);
 }
 
 .title {
@@ -13,14 +13,9 @@ body {
     border-radius: 10px;
 }
 
-.body-wrapper {
-    background-color: rgb(143, 149, 175);
-    width: 80%;
-    margin-left: 10%;
-    margin-top: 4%;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    margin-bottom: 5%;
+
+.body-wrapper img {
+    width: 100%;
 }
 
 .resume {
@@ -39,14 +34,16 @@ body {
     margin-top: 2%;
     display: flex;
     justify-content: center;
-
+    width: 40%;
 }
 
 .links-wrapper a {
     margin-left: 5%;
     margin-right: 5%;
-    font-size: 1.4em;
+    font-size: .85em;
     text-decoration: none;
+    color: white;
+    
 }
 
 .aboutme-wrapper {
@@ -58,9 +55,117 @@ body {
 }
 
 .contact-wrapper {
-    margin-top: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    color: aliceblue;
+    margin-bottom: 2%;
+    width: 75%;
+}
+
+.header-wrapper {
+    height: 20%;
+    background-color: rgb(5, 5, 24);
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+    padding-bottom: 2%;
+}
+
+.header-wrapper-mid {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 60%;
+}
+
+.header-wrapper h1 {
+    margin-top: 4%;
+    font-size:250% ;
+    color: aliceblue;
+}
+
+.header-wrapper-side {
+    width: 20%;
+    color: aliceblue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.header-wrapper-side i {
+    margin-right: 2%;
+    font-size: 150%;
+}
+
+.header-wrapper-side a {
+    text-decoration: none;
+    color: aliceblue;
+}
+
+.footer-wrapper {
+
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    background-color: rgb(5, 5, 24);
+    color: aliceblue;
+}
+
+.contact-wrapper div {
+    display: flex;
+    align-items: center;
+    width: 20%;
+}
+
+.contact-wrapper div i {
+    margin-right: 5%;
+}
+
+.body-wrapper-resume {
+    background-color: rgb(50, 78, 102);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.body-wrapper-resume img {
+    width: 60%;
+}
+
+.body-wrapper-about {
+    background-color: rgb(50, 78, 102);
+    color: aliceblue;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    padding-bottom: 5%;
+}
+
+.body-wrapper-about p {
+    text-align: center;
+}
+
+.body-wrapper-projects {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 5%;
+    padding-bottom: 20%;
+    background-color: rgb(50, 78, 102);
+}
+
+.body-wrapper-projects a {
+    color: black;
+    text-decoration: none;
+    font-size: 2em;
+}
+
+.body-wrapper-projects h1 {
+    font-size: 350%;
+    margin-bottom: 5%;
 }
