--- a/styles.css
+++ b/styles.css
@@ -170,6 +170,7 @@ body {
     color: black;
     text-decoration: none;
     font-size: 2em;
+    margin-bottom: 5%;
 }
 
 .body-wrapper-projects h1 {
