--- a/styles.css
+++ b/styles.css
@@ -150,6 +150,10 @@ body {
     font-size: 400%;
 }
 
+.body-wrapper-about a {
+    color: aliceblue;
+}
+
 .body-wrapper-about p {
     text-align: center;
     width: 50%;
