--- a/styles.css
+++ b/styles.css
@@ -238,6 +238,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    width: 90%;
 }
 
 .side-by-side img {
