--- a/styles.css
+++ b/styles.css
@@ -232,6 +232,10 @@ body {
 
 .about-me-item {
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 130%;
 }
 
 .side-by-side {
