--- a/styles.css
+++ b/styles.css
@@ -243,6 +243,7 @@ body {
     align-items: center;
     justify-content: space-around;
     width: 80%;
+    flex-direction: column;
 }
 
 .side-by-side img {
@@ -250,5 +251,5 @@ body {
 }
 
 .side-by-side p {
-    font-size: 1.5em;
+    font-size: 1.2em;
 }
