--- a/styles.css
+++ b/styles.css
@@ -237,7 +237,11 @@ body {
     justify-content: space-around;
     width: 100%;
     flex-direction: column;
-    margin-bottom: 3%;
+    margin-bottom: 8%;
+}
+
+.about-me-item h2 {
+    font-size: 2em;
 }
 
 .side-by-side {
@@ -253,5 +257,5 @@ body {
 }
 
 .side-by-side p {
-    font-size: 1.1em;
+    font-size: 1.2em;
 }
